Main header and Nav z-index fix

--- a/wp-content/themes/mct/styles/modules/_header-main.scss
+++ b/wp-content/themes/mct/styles/modules/_header-main.scss
@@ -4,10 +4,8 @@
 	left:0;
 	width:100%;
 	background:#404040;
-	// background:rgba(255,255,255,1);
     height: $base*10;
-    z-index:100;
-    // border-bottom:1px solid darken($lightestGrey, 10%);
+    z-index:501;
 
     &--active{
 		background:rgba(255,255,255,0);
@@ -23,8 +21,6 @@
 		width:65px;
 		height:100vh;
 		border-bottom:none;
-		// border-right:1px solid darken($lightestGrey, 10%);
-		// padding:$base*6;
 
 		// Close button
 		&__close-button{
